--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ footer {
     text-align: center;
     /* position: fixed; */
     bottom: 0;
-    width: 100%;
+    /* width: 100%; */
 }
 
 
@@ -170,6 +170,7 @@ section {
 
 
 @media screen and (max-width: 768px) {
+
     .menu-btn {
         display: block;
         margin-right: 30px;
